--- a/README
+++ b/README
@@ -9,3 +9,18 @@ qemu-system-i386 \
 -device mrf-pmcevr-230,chardev=foo \
 -chardev socket,id=foo2,host=127.0.0.1,port=9060,nowait \
 -device mrf-cpci-evg-230,chardev=foo2
+
+
+
+Protocol
+
+4 byte frames.
+
+buf[0] == 0xe1  # identification
+buf[1] # bit array
+ 0x01 # link active
+ 0x02 # set - data is dbus, clear data is buf
+ 0x04 # set - buf data is first byte
+ 0x08 # set - buf data is last byte
+buf[2] # event code
+buf[3] # data
